--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "build-css": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
-    "build": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
